QPPA-10269: fix spotbugs issues