@@ -7,7 +7,9 @@ import gov.cms.qpp.conversion.model.validation.MeasureConfig;
 import gov.cms.qpp.conversion.model.validation.MeasureConfigs;
 import gov.cms.qpp.conversion.model.validation.SubPopulation;
 
+import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
@@ -23,30 +25,48 @@ public class MeasureConfigHelper {
 
 	public static final String MEASURE_ID = "measureId";
 	public static final String NO_MEASURE = "No given measure id";
-	private static Set<String> MULTI_TO_SINGLE_PERF_RATE_MEASURE_ID = Set.of("005", "007", "008", "143", "438");
-	public final static String SINGLE_TO_MULTI_PERF_RATE_MEASURE_ID = "370";
-	public static final Set<String> CPC_PLUS_MEASURES = Set.of("001", "236");
+
+	// Initialize via static block to avoid Java version issues with Set.of(...)
+	private static Set<String> MULTI_TO_SINGLE_PERF_RATE_MEASURE_ID;
+	static {
+		Set<String> temp = new HashSet<>();
+		temp.add("005");
+		temp.add("007");
+		temp.add("008");
+		temp.add("143");
+		temp.add("438");
+		MULTI_TO_SINGLE_PERF_RATE_MEASURE_ID = Collections.unmodifiableSet(temp);
+	}
+
+	public static final String SINGLE_TO_MULTI_PERF_RATE_MEASURE_ID = "370";
+	public static final Set<String> CPC_PLUS_MEASURES;
+	static {
+		Set<String> cpc = new HashSet<>();
+		cpc.add("001");
+		cpc.add("236");
+		CPC_PLUS_MEASURES = Collections.unmodifiableSet(cpc);
+	}
 
 	private MeasureConfigHelper() {
 		// private for this helper class
 	}
 
 	/**
-	 * Convenience method to retrieve the measure configuration for validation from an ecqm node
+	 * Convenience method to retrieve the measure configuration for validation from an eCQM node
 	 *
 	 * @param node Contains the id that associates with the measure config
-	 * @return
+	 * @return the MeasureConfig corresponding to that node, or null if not found
 	 */
 	public static MeasureConfig getMeasureConfig(Node node) {
-		String measureId =  node.getValue(MEASURE_ID);
+		String measureId = node.getValue(MEASURE_ID);
 		return findMeasureConfigByUuid(measureId);
 	}
 
 	/**
 	 * Gets the electronic measure id by uuid or defaults to null if none exists
 	 *
-	 * @param uuid identifier used to fined the electronic measure id
-	 * @return electronic measure id
+	 * @param uuid identifier used to find the electronic measure id
+	 * @return electronic measure id, or null if none
 	 */
 	public static String getMeasureConfigIdByUuidOrDefault(String uuid) {
 		MeasureConfig config = findMeasureConfigByUuid(uuid);
@@ -60,7 +80,6 @@ public class MeasureConfigHelper {
 		if (uuid == null) {
 			return null;
 		}
-
 		return MeasureConfigs.getConfigurationMap().get(uuid.toLowerCase(Locale.US));
 	}
 
@@ -76,55 +95,57 @@ public class MeasureConfigHelper {
 	}
 
 	/**
-	 * Creates a grouping of sub populations extracted from the measure configurations
+	 * Creates a grouping of subpopulations extracted from the measure configurations
 	 *
-	 * @param node object that holds the nodes to be grouped
+	 * @param node          object that holds the nodes to be grouped
 	 * @param measureConfig object that holds the groupings
 	 * @return List of decoded Nodes
 	 */
 	public static List<Node> createSubPopulationGrouping(Node node, MeasureConfig measureConfig) {
 		List<SubPopulation> measureConfigSubPopulations = measureConfig.getSubPopulation();
+
 		if (SINGLE_TO_MULTI_PERF_RATE_MEASURE_ID.equalsIgnoreCase(measureConfig.getMeasureId())) {
 			measureConfigSubPopulations = setUpSingleToMultiSubPops(measureConfigSubPopulations);
 		}
+
 		int subPopCount = measureConfigSubPopulations.size();
 		List<Node> subPopNodes = initializeMeasureDataList(subPopCount);
 		Map<String, Integer> mapPopulationIdToSubPopIndex = createSubPopulationIndexMap(measureConfigSubPopulations);
+
 		node.getChildNodes().stream()
-			.filter(childNode -> TemplateId.MEASURE_DATA_CMS_V4 == childNode.getType())
-			.forEach(childNode -> {
-				String populationId = childNode.getValue(MEASURE_POPULATION);
-				Integer subPopIndex = mapPopulationIdToSubPopIndex.get(populationId.toUpperCase(Locale.ENGLISH));
-				if (subPopIndex != null) {
-					Node newParentNode = subPopNodes.get(subPopIndex);
-					newParentNode.addChildNode(childNode);
-				}
-			});
+				.filter(childNode -> TemplateId.MEASURE_DATA_CMS_V4 == childNode.getType())
+				.forEach(childNode -> {
+					String populationId = childNode.getValue(MEASURE_POPULATION);
+					Integer subPopIndex = mapPopulationIdToSubPopIndex.get(populationId.toUpperCase(Locale.ENGLISH));
+					if (subPopIndex != null) {
+						Node newParentNode = subPopNodes.get(subPopIndex);
+						newParentNode.addChildNode(childNode);
+					}
+				});
+
 		return subPopNodes;
 	}
 
 	private static List<SubPopulation> setUpSingleToMultiSubPops(List<SubPopulation> measureConfigSubPopulations) {
-		return measureConfigSubPopulations
-			.stream()
-			.filter(Objects::nonNull)
-			.collect(Collectors.toList());
+		return measureConfigSubPopulations.stream()
+				.filter(Objects::nonNull)
+				.collect(Collectors.toList());
 	}
 
 	/**
-	 * Initializes a list of Measure Section nodes from how many sub populations are being converted
+	 * Initializes a list of Measure Section nodes from how many subpopulations are being converted
 	 *
-	 * @param subPopulationCount number of sub populations to convert
+	 * @param subPopulationCount number of subpopulations to convert
 	 * @return List of decoded Nodes
 	 */
 	private static List<Node> initializeMeasureDataList(int subPopulationCount) {
 		return IntStream.range(0, subPopulationCount)
-			.mapToObj(ignore -> new Node(TemplateId.MEASURE_REFERENCE_RESULTS_CMS_V5))
-			.collect(Collectors.toList());
+				.mapToObj(ignore -> new Node(TemplateId.MEASURE_REFERENCE_RESULTS_CMS_V5))
+				.collect(Collectors.toList());
 	}
 
-
 	/**
-	 * Creates a map of child uuids to indexes for sub population grouping
+	 * Creates a map of child UUIDs to indexes for subpopulation grouping
 	 *
 	 * @param subPopulations list of Subpopulations to index
 	 * @return Map of Population UUID keys and index values
@@ -133,7 +154,7 @@ public class MeasureConfigHelper {
 		Map<String, Integer> supPopMap = new HashMap<>();
 		int index = 0;
 		for (SubPopulation subPopulation : subPopulations) {
-			if (null !=subPopulation.getNumeratorUuid()) {
+			if (subPopulation.getNumeratorUuid() != null) {
 				supPopMap.put(subPopulation.getDenominatorUuid(), index);
 				supPopMap.put(subPopulation.getDenominatorExceptionsUuid(), index);
 				supPopMap.put(subPopulation.getDenominatorExclusionsUuid(), index);
@@ -152,29 +173,38 @@ public class MeasureConfigHelper {
 	 * @return the best available measure id from the given config or a message stating that none were found.
 	 */
 	static String getPrioritizedId(MeasureConfig measureConfig) {
-		return Stream.of(measureConfig.getElectronicMeasureId(),
-			measureConfig.getElectronicMeasureVerUuid(), measureConfig.getMeasureId())
-			.filter(Objects::nonNull)
-			.findFirst()
-			.orElse(NO_MEASURE);
+		return Stream.of(
+						measureConfig.getElectronicMeasureId(),
+						measureConfig.getElectronicMeasureVerUuid(),
+						measureConfig.getMeasureId()
+				)
+				.filter(Objects::nonNull)
+				.findFirst()
+				.orElse(NO_MEASURE);
 	}
 
 	/**
-	 * Checks the given measure id if it is a multi to single performance rate id check.
+	 * Checks the given measure id if it is a multi-to-single performance rate id.
 	 *
-	 * @param measureId
-	 * @return
+	 * @param measureId a measure ID to check
+	 * @return true if it is configured as a multi-to-single performance rate ID
 	 */
 	public static boolean checkMultiToSinglePerformanceRateId(String measureId) {
 		return MULTI_TO_SINGLE_PERF_RATE_MEASURE_ID.contains(measureId);
 	}
 
 	/**
-	 * Sets multi-performance rate to single performance rate configurations.
+	 * Replaces the internal MULTI_TO_SINGLE_PERF_RATE_MEASURE_ID set with a defensive copy
+	 * of the provided set, so the static state cannot be mutated externally.
 	 *
-	 * @param multiToSinglePerfRateMeasureIdSet
+	 * @param multiToSinglePerfRateMeasureIdSet a set of measure IDs
 	 */
-	public static void setMultiToSinglePerfRateMeasureId (Set<String> multiToSinglePerfRateMeasureIdSet) {
-		MULTI_TO_SINGLE_PERF_RATE_MEASURE_ID = multiToSinglePerfRateMeasureIdSet;
+	public static void setMultiToSinglePerfRateMeasureId(Set<String> multiToSinglePerfRateMeasureIdSet) {
+		if (multiToSinglePerfRateMeasureIdSet == null) {
+			MULTI_TO_SINGLE_PERF_RATE_MEASURE_ID = Collections.emptySet();
+		} else {
+			Set<String> copy = new HashSet<>(multiToSinglePerfRateMeasureIdSet);
+			MULTI_TO_SINGLE_PERF_RATE_MEASURE_ID = Collections.unmodifiableSet(copy);
+		}
 	}
 }
